--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Maven / Gradle build output
+/target/
+/build/
+
+# IDE files
+/.classpath
+/.project
+/.settings/
+/.idea/
+/.vscode/
+
+# Spring secrets
+**/application.properties
+**/application-*.properties
+
